--- a/Test/Test.RestApi/Test.RestApi.csproj
+++ b/Test/Test.RestApi/Test.RestApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
