--- a/Lib/Neon.Xunit.YugaByte/Neon.Xunit.YugaByte.csproj
+++ b/Lib/Neon.Xunit.YugaByte/Neon.Xunit.YugaByte.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <Version>2.6.0</Version>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
