--- a/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
+++ b/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
@@ -2,11 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
-
+    <LangVersion>latest</LangVersion>
     <RootNamespace>TestCouchbase</RootNamespace>
-
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
