--- a/Tools/modelgen/modelgen.csproj
+++ b/Tools/modelgen/modelgen.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
