--- a/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
+++ b/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <IsPackable>false</IsPackable>
     <RootNamespace>TestKube</RootNamespace>
@@ -38,7 +38,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="NATS.Client" Version="0.11.0" />
     <PackageReference Include="STAN.Client" Version="0.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
