#1078: ComposedFixture: Add option to start/stop fixtures in parallel

--- a/Test/Test.Neon.Xunit/Test.Neon.Xunit.csproj
+++ b/Test/Test.Neon.Xunit/Test.Neon.Xunit.csproj
@@ -47,7 +47,10 @@
     <ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube\Neon.Kube.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Nats\Neon.Nats.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Web\Neon.Web.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Xunit.Cadence\Neon.Xunit.Cadence.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Xunit.Couchbase\Neon.Xunit.Couchbase.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Xunit.Kube\Neon.Xunit.Kube.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Xunit\Neon.Xunit.csproj" />
     <ProjectReference Include="..\Test.Neon.Models\Test.Neon.Models.csproj" />
