--- a/Charts/harbor/values.yaml
+++ b/Charts/harbor/values.yaml
@@ -644,13 +644,13 @@ trivy:
   # If the value is set to `true` you have to manually download the `trivy.db` file and mount it in the
   # `/home/scanner/.cache/trivy/db/trivy.db` path.
   skipUpdate: false
-  resources:
-    requests:
-      cpu: 200m
-      memory: 512Mi
-    limits:
-      cpu: 1
-      memory: 1Gi
+  resources: {}
+  #  requests:
+  #    cpu: 200m
+  #    memory: 512Mi
+  #  limits:
+  #    cpu: 1
+  #    memory: 1Gi
   nodeSelector: 
     neonkube.io/neon-system.registry: "true"
   tolerations: 
