--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -313,6 +313,9 @@
     <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.cs">
       <Link>Helper\Test_NeonHelper.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.IO.cs">
+      <Link>Helper\Test_NeonHelper.IO.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\Helper\Test_NeonHelper.Json.cs">
       <Link>Helper\Test_NeonHelper.Json.cs</Link>
     </Compile>
