--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -337,6 +337,9 @@
     <Compile Include="..\Test.Neon.Common\IO\Test_PreprocessReader.cs">
       <Link>IO\Test_PreprocessReader.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\IO\Test_StaticFileSystem.cs">
+      <Link>IO\Test_StaticFileSystem.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\IO\Test_Stream.cs">
       <Link>IO\Test_Stream.cs</Link>
     </Compile>
