--- a/Test/Test.Neon.Common/Test.Neon.Common.csproj
+++ b/Test/Test.Neon.Common/Test.Neon.Common.csproj
@@ -30,6 +30,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="IO\Resources\Folder1\Folder3\TextFile5.txt" />
+    <None Remove="IO\Resources\Folder1\TextFile3.txt" />
+    <None Remove="IO\Resources\Folder1\TextFile4.txt" />
+    <None Remove="IO\Resources\Folder2\Folder4\TextFile8.txt" />
+    <None Remove="IO\Resources\Folder2\TextFile6.txt" />
+    <None Remove="IO\Resources\Folder2\TextFile7.txt" />
+    <None Remove="IO\Resources\TextFile1.txt" />
+    <None Remove="IO\Resources\TextFile2.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="1.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -42,6 +53,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="IO\Resources\Folder1\Folder3\TextFile5.txt" />
+    <EmbeddedResource Include="IO\Resources\Folder1\TextFile3.txt" />
+    <EmbeddedResource Include="IO\Resources\Folder1\TextFile4.txt" />
+    <EmbeddedResource Include="IO\Resources\Folder2\Folder4\TextFile8.txt" />
+    <EmbeddedResource Include="IO\Resources\Folder2\TextFile6.txt" />
+    <EmbeddedResource Include="IO\Resources\Folder2\TextFile7.txt" />
+    <EmbeddedResource Include="IO\Resources\TextFile1.txt" />
+    <EmbeddedResource Include="IO\Resources\TextFile2.txt" />
   </ItemGroup>
 
   <ItemGroup>
