--- a/Charts/kiali/templates/clusterrole.yaml
+++ b/Charts/kiali/templates/clusterrole.yaml
@@ -109,7 +109,7 @@ rules:
   - get
   - list
   - watch
-- apiGroups: ["extensions"]
+- apiGroups: ["networking.k8s.io"]
   resources:
   - ingresses
   verbs:
@@ -186,6 +186,7 @@ rules:
   - nodes
   - pods
   - pods/log
+  - pods/proxy
   - replicationcontrollers
   - services
   verbs:
@@ -226,36 +227,9 @@ rules:
   - patch
   {{- end }}
 - apiGroups:
-  - config.istio.io
   - networking.istio.io
-  - authentication.istio.io
-  - rbac.istio.io
   - security.istio.io
   resources: ["*"]
-  verbs:
-  - get
-  - list
-  - watch
-  {{- if eq .Values.onlyViewOnlyMode false }}
-  - create
-  - delete
-  - patch
-  {{- end }}
-- apiGroups: ["authentication.maistra.io"]
-  resources:
-  - servicemeshpolicies
-  verbs:
-  - get
-  - list
-  - watch
-  {{- if eq .Values.onlyViewOnlyMode false }}
-  - create
-  - delete
-  - patch
-  {{- end }}
-- apiGroups: ["rbac.maistra.io"]
-  resources:
-  - servicemeshrbacconfigs
   verbs:
   - get
   - list
