--- a/Lib/Neon.Cassandra/Neon.Cassandra.csproj
+++ b/Lib/Neon.Cassandra/Neon.Cassandra.csproj
@@ -7,14 +7,14 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
-    <Description>Cassandra related utilities and extensions</Description>
+    <Description>Yugabyte Cassandra .NET client related utilities and extensions</Description>
     <Copyright>Copyright © 2005-2020 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.Cassandra/README.md</PackageProjectUrl>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/nforgeio/neonKUBE</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>cassandra cassandradb</PackageTags>
+    <PackageTags>cassandra cassandradb yugabyte</PackageTags>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
