--- a/Test/Test.Neon.Cassandra/Test.Neon.Cassandra.csproj
+++ b/Test/Test.Neon.Cassandra/Test.Neon.Cassandra.csproj
@@ -4,7 +4,22 @@
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Scripts\schema-0000.script" />
+    <None Remove="Scripts\schema-0001.script" />
+    <None Remove="Scripts\schema-0002.script" />
+    <None Remove="Scripts\schema-0003.script" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\schema-0000.script" />
+    <EmbeddedResource Include="Scripts\schema-0001.script" />
+    <EmbeddedResource Include="Scripts\schema-0002.script" />
+    <EmbeddedResource Include="Scripts\schema-0003.script" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
