update nodeselectors to use internal labels

--- a/Charts/cortex/values.yaml
+++ b/Charts/cortex/values.yaml
@@ -111,7 +111,7 @@ strategy:
 
 annotations: {}
 nodeSelector:
-  neonkube.io/monitor.metrics: 'true'
+  neonkube.io/monitor.metrics-internal: 'true'
 
 affinity: {}
 
