--- a/Charts/elasticsearch/values.yaml
+++ b/Charts/elasticsearch/values.yaml
@@ -157,7 +157,7 @@ schedulerName: ""
 
 imagePullSecrets: []
 nodeSelector:
-  neonkube.io/monitor.logs: "true"
+  neonkube.io/monitor.logs-internal: "true"
 tolerations:
   - key: "neonkube.io/logs"
     operator: "Exists"
