--- a/Charts/prometheus-operator/values.yaml
+++ b/Charts/prometheus-operator/values.yaml
@@ -294,7 +294,7 @@ alertmanager:
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
     ##
     nodeSelector: 
-      neonkube.io/monitor.metrics: "true"
+      neonkube.io/monitor.metrics-internal: "true"
 
     ## Define resources requests and limits for single Pods.
     ## ref: https://kubernetes.io/docs/user-guide/compute-resources/
@@ -956,7 +956,7 @@ prometheusOperator:
       podAnnotations:
         sidecar.istio.io/inject: "false"
       nodeSelector: 
-        neonkube.io/monitor.metrics: "true"
+        neonkube.io/monitor.metrics-internal: "true"
       tolerations: []
 
 
@@ -1080,7 +1080,7 @@ prometheusOperator:
   ## ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
   nodeSelector:
-    neonkube.io/monitor.metrics: "true"
+    neonkube.io/monitor.metrics-internal: "true"
 
   ## Tolerations for use with node taints
   ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
@@ -1327,7 +1327,7 @@ prometheus:
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
     ##
     nodeSelector: 
-      neonkube.io/monitor.metrics: "true"
+      neonkube.io/monitor.metrics-internal: "true"
 
     ## Secrets is a list of Secrets in the same namespace as the Prometheus object, which shall be mounted into the Prometheus Pods.
     ## The Secrets are mounted into /etc/prometheus/secrets/. Secrets changes after initial creation of a Prometheus object are not
