--- a/Charts/yugabyte/values.yaml
+++ b/Charts/yugabyte/values.yaml
@@ -174,7 +174,7 @@ serviceMonitor:
 resources: {}
 
 nodeSelector: 
-  neonkube.io/monitor.metrics: "true"
+  neonkube.io/monitor.metrics-internal: "true"
 
 tolerations: []
 
