--- a/Charts/grafana/values.yaml
+++ b/Charts/grafana/values.yaml
@@ -161,7 +161,7 @@ resources: {}
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
 #
 nodeSelector:
-  neonkube.io/monitor.metrics: "true"
+  neonkube.io/monitor.metrics-internal: "true"
 
 ## Tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
