[temporal]: Try to categorize test failures

--- a/Test/Test.Neon.Temporal.net/Test.Neon.Temporal.net.csproj
+++ b/Test/Test.Neon.Temporal.net/Test.Neon.Temporal.net.csproj
@@ -249,6 +249,9 @@
     <Compile Include="..\Test.Neon.Temporal\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Temporal\FactAttributes.cs">
+      <Link>FactAttributes.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Temporal\TemporalTestHelper.cs">
       <Link>TemporalTestHelper.cs</Link>
     </Compile>
