--- a/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
+++ b/Lib/Neon.Kube.Hosting/Neon.Kube.Hosting.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>2.1.0-internal</Version>
+    <Version>2.10.0-internal</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>neonKUBE hosting common code</Description>
+    <Description>[Internal use only]: neonKUBE hosting manager common classes.</Description>
     <Copyright>Copyright © 2005-2020 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <RootNamespace>Neon.Kube</RootNamespace>
