--- a/Lib/Neon.Kube.HyperVLocal/Neon.Kube.HyperVLocal.csproj
+++ b/Lib/Neon.Kube.HyperVLocal/Neon.Kube.HyperVLocal.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>2.1.0-internal</Version>
+    <Version>2.10.0-internal</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>neonKUBE hosting manager for Windows Hyper-V for local development and test</Description>
+    <Description>[Internal use only]: neonKUBE hosting manager for Windows Hyper-V (local development and test)</Description>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
