--- a/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
+++ b/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>2.1.0-internal</Version>
+    <Version>2.10.0-internal</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>neonKUBE XenServer Hosting</Description>
+    <Description>[Internal use only]: neonKUBE hosting manager for XenServer/XCP-ng envirojnhments.</Description>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>6.0.0.0</FileVersion>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
@@ -20,7 +20,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
-    <PackageTags>kubernetes</PackageTags>
+    <PackageTags>l</PackageTags>
     <RootNamespace>Neon.Kube</RootNamespace>
   </PropertyGroup>
 
