--- a/Images/neon-cluster-manager/Dockerfile
+++ b/Images/neon-cluster-manager/Dockerfile
@@ -18,9 +18,11 @@
 # ARGUMENTS:
 #
 #   ORGANIZATION    - The Docker Hub organization
+#   CLUSTER_VERSION - The neonKUBE cluster version
 
 ARG         ORGANIZATION
-FROM        ${ORGANIZATION}/aspnet
+ARG         CLUSTER_VERSION
+FROM        ${ORGANIZATION}/cluster-aspnet:${CLUSTER_VERSION}
 MAINTAINER  marcus@euarctos.com
 STOPSIGNAL  SIGTERM
 ARG         APPNAME
