--- a/Images/neon-log-host/Dockerfile
+++ b/Images/neon-log-host/Dockerfile
@@ -6,6 +6,8 @@
 # Fluent Bit deployed on each neonKUBE node that forwards log events to the
 # cluster log aggregator.
 
+ARG         ORGANIZATION
+ARG         BRANCH
 FROM        ${ORGANIZATION}/fluent-bit:${BRANCH}-latest
 MAINTAINER  jeff@lilltek.com
 STOPSIGNAL  SIGTERM
