switched to td-agent-bit and use neon ubuntu base image

--- a/Images/neon-log-host/Dockerfile
+++ b/Images/neon-log-host/Dockerfile
@@ -3,25 +3,31 @@
 # CONTRIBUTOR:  Jeff Lill, Marcus Bowyer
 # COPYRIGHT:    Copyright (c) 2016-2020 by neonFORGE LLC.  All rights reserved.
 #
-# Fluent Bit deployed on each neonKUBE node that forwards log events to the
+# TD Agent Bit deployed on each neonKUBE node that forwards log events to the
 # cluster log aggregator.
 
 ARG         ORGANIZATION
-ARG         BRANCH
-FROM        ${ORGANIZATION}/fluent-bit:${BRANCH}-latest
+ARG         CLUSTER_VERSION
+FROM        ${ORGANIZATION}/cluster-ubuntu:${CLUSTER_VERSION}
 MAINTAINER  jeff@lilltek.com
 STOPSIGNAL  SIGTERM
+ARG         APPNAME
+
+RUN wget -qO - https://packages.fluentbit.io/fluentbit.key | apt-key add - \
+    && echo "deb https://packages.fluentbit.io/ubuntu/focal focal main" >> /etc/apt/sources.list \
+    && apt update -y \
+    && apt install -y td-agent-bit
 
 # Configuration files
-COPY conf/fluent-bit.conf \
+COPY conf/td-agent-bit.conf \
      conf/parsers.conf \
      conf/plugins.conf \
      conf/functions.lua \
-     conf/fluent-bit-filter.conf \
-     conf/fluent-bit-input.conf \
-     conf/fluent-bit-output.conf \
-     conf/fluent-bit-service.conf \
-     /fluent-bit/etc/
+     conf/td-agent-bit-filter.conf \
+     conf/td-agent-bit-input.conf \
+     conf/td-agent-bit-output.conf \
+     conf/td-agent-bit-service.conf \
+     /td-agent-bit/etc/
 
 COPY docker-entrypoint.sh   /
 COPY _common/*.sh           /
