--- a/Images/cluster-ubuntu/Dockerfile
+++ b/Images/cluster-ubuntu/Dockerfile
@@ -15,7 +15,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Base Cluster Alpine image.
+# Cluster Ubuntu image.
 #
 # ARGUMENTS:
 #
