[images]: Container scripts call new Log-ImageBuild function and some fixes

--- a/Images/ubuntu/Dockerfile
+++ b/Images/ubuntu/Dockerfile
@@ -30,10 +30,6 @@ STOPSIGNAL  SIGTERM
 
 COPY resolv.conf.head.sh    /etc/resolv.conf.head
 
-# Copy common helper scripts (most logging related)
-
-COPY docker-entrypoint.sh   /
-
 # Set timezone to UTC
 
 ENV TZ=UTC
@@ -42,5 +38,4 @@ ENV TZ=UTC
 
 RUN apt-get update \
     && apt-get install -yq tini ca-certificates wget nano \
-    && apt-get clean \
-    && chmod 700 /*.sh
+    && apt-get clean
